--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   freezed: ^0.14.5
   awesome_notifications: ^0.0.6+10
   workmanager: ^0.4.1
+  pull_to_refresh: ^2.0.0
 
 dev_dependencies:
   flutter_test:
